# v3-catalog

./: Cargo.toml  README.md
hasura/: README.md  metadata.json
postgres-catalog-connector/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
postgres-catalog-connector/src/: configuration.rs  error.rs  main.rs  routes.rs  sql.rs  tables.rs
postgres-catalog-connector/src/routes/: get_capabilities.rs  get_healthz.rs  get_schema.rs  post_query.rs  post_query_explain.rs
postgres-catalog-connector/src/sql/: fkey.rs  predicate_builder.rs  utils.rs
src/: configuration.rs  error.rs  lib.rs  main.rs  routes.rs  sql.rs  tables.rs
src/routes/: get_capabilities.rs  get_healthz.rs  get_schema.rs  healthz.rs  post_query.rs  post_query_explain.rs
