[package]
name = "cc-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-extra = "0.7.4"
axum-macros = "0.3.7"
bincode = "1.3.3"
clap = "4.3.11"
serde = "1.0.166"
serde_json = "1.0.100"
sqlparser = "0.35.0"
sqlx = "0.7.0"
tokio = { version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"] }
uuid = "1.4.0"
